--- a/bencode-parser-fuzz/bencode-parser-fuzz/Cargo.toml
+++ b/bencode-parser-fuzz/bencode-parser-fuzz/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 bencoder =  { git = "https://github.com/lambdaclass/libtorrent-rs", branch = "main" }
 nom_bencode =  { git = "https://github.com/edg-l/nom-bencode", branch = "master" }
 honggfuzz = "0.5.51"
+nom = "7.1.3"
