--- a/wasmbin_fuzz/Cargo.toml
+++ b/wasmbin_fuzz/Cargo.toml
@@ -1,35 +1,8 @@
-
 [package]
-name = "wasmbin-fuzz"
-version = "0.0.0"
-authors = ["Automatically generated"]
-publish = false
-edition = "2018"
+name = "wasmbin_fuzz"
+version = "0.1.0"
+edition = "2021"
 
-[package.metadata]
-cargo-fuzz = true
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libfuzzer-sys = "0.4.2"
-
-[dependencies.wasmbin]
-path = ".."
-default-features = false
-
-# Prevent this from interfering with workspaces
-[workspace]
-members = ["."]
-
-[[bin]]
-name = "decode"
-path = "fuzz_targets/decode.rs"
-
-[[bin]]
-name = "roundtrip"
-path = "fuzz_targets/roundtrip.rs"
-
-[[bin]]
-name = "encode"
-path = "fuzz_targets/encode.rs"
-test = false
-doc = false
