--- a/deflate_fuzz/Cargo.toml
+++ b/deflate_fuzz/Cargo.toml
@@ -1,8 +1,39 @@
 [package]
-name = "deflate_fuzz"
-version = "0.1.0"
-edition = "2021"
+name = "rust-fuzz"
+version = "0.0.0"
+authors = ["Automatically generated"]
+publish = false
+edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[package.metadata]
+cargo-fuzz = true
 
 [dependencies]
+libfuzzer-sys = "0.4"
+libflate = "1.2.0"
+inflate = "0.4.5"
+
+[dependencies.rust]
+path = ".."
+
+# Prevent this from interfering with workspaces
+[workspace]
+members = ["."]
+
+[[bin]]
+name = "fuzz_target_1"
+path = "fuzz_targets/fuzz_target_1.rs"
+test = false
+doc = false
+
+[[bin]]
+name = "inflate"
+path = "fuzz_targets/inflate.rs"
+test = false
+doc = false
+
+[[bin]]
+name = "libflate"
+path = "fuzz_targets/libflate.rs"
+test = false
+doc = false
