--- a/cairo_fuzz/fuzz/Cargo.toml
+++ b/cairo_fuzz/fuzz/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 honggfuzz = "0.5.51"
 cairo-vm = { git = "https://github.com/lambdaclass/cairo-rs.git", rev = "c15c642adef6ee0d680e50a680e9b88a3f7f30dd" }
+arbitrary = { version = "1.2.3", features = ["derive"] }
 
