--- a/.github/workflows/fuzzer.yml
+++ b/.github/workflows/fuzzer.yml
@@ -17,7 +17,6 @@ jobs:
         path: test_fuzzer/hfuzz_workspace/input
         key: ${{ runner.os }}-inputs
 
-    
     - name: Install dependencies
       run: |
         sudo apt-get update
@@ -38,17 +37,14 @@ jobs:
         HFUZZ_RUN_ARGS="--run_time 5" cargo hfuzz run test_fuzzer
         HFUZZ_RUN_ARGS="--minimize" cargo hfuzz run test_fuzzer
 
-    # - uses: stefanzweifel/git-auto-commit-action@v4
-    #   with:
-    #     commit_message: changing report
-    #     file_pattern: '*/hfuzz_workspace/test_fuzzer/HONGGFUZZ*  */hfuzz_workspace/test_fuzzer/SIG*'
-
     - name: Checkout commits  
       uses: actions/checkout@v2
       with:
         # Checkout as many commits as needed for the diff
         fetch-depth: 2
+
     - name: Check diff
+      uses: dorny/paths-filter@v2
       id: check_file_changed
       with:
         filters: |
@@ -58,6 +54,6 @@ jobs:
     - name: Create issue 
       uses: JasonEtco/create-an-issue@v2
       # steps.<step_id>.outputs.<output name>
-      if: steps.check_file_changed.outputs.report == 'true'
+      if: steps.check_file_changed.outputs.report == 'True'
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
